Scrolling iframe inside scrollable div does not work with trackpad https://bugs.webkit.org/show_bug.cgi?id=150168 <rdar://problem/23143931>

Reviewed by Brent Fulgham.

Source/WebCore:

When scrolling in an iframe nested under an overflow scrolling region, EventHandler::platformPrepareForWheelEvents
fails to compute the correct scrollableArea, using the overflow div's scrollable area instead of the iframe's view.
This causes the latching algorithm to bail out of handling the wheel event. To avoid this, we special-case the
decision to compute the scrollableArea from the scrollableContainer if we are attempting to scroll in an iframe.

Test: fast/scrolling/latching/scroll-iframe-in-overflow.html

* page/mac/EventHandlerMac.mm:
(WebCore::EventHandler::platformPrepareForWheelEvents):

LayoutTests:

Tests that an iframe nested under an overflow scrolling div can be scrolled.

* fast/scrolling/latching/scroll-iframe-in-overflow-expected.txt: Added.
* fast/scrolling/latching/scroll-iframe-in-overflow.html: Added.

Canonical link: https://commits.webkit.org/169201@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192124 268f45cc-cd09-0410-ab3c-d52691b4dbfc